--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="selections">
+        <button class="selection" data-selection = "rock">✊</button>
+        <button class="selection" data-selection = "paper">🖐️</button>
+        <button class="selection" data-selection = "scissors">✌️</button>
+    </div>
+    <div class="results">
+        <div class="player">
+            You
+            <span class="result-score" data-your-score>0</span>
+        </div>
+        <div data-final-column class="computer">
+            Computer
+            <span class="result-score" data-computer-score >0</span>
+        </div>
+        <!-- <div class="result-selection-winner">✊</div>
+        <div class="result-selection">✌️</div> -->
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
